[package]
name = "cuaa"
version = "0.2.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
#colored = "2.0"
crossterm = "0.25.0"
getch = "0.3.1"
glob = "0.3.0"
#reqwest = { version = "0.11", features = ["blocking"] }
